--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,8 +1,8 @@
 .footer{
     position: absolute;
     width: 100%;
-    left: 0px;
-    bottom: 0;
+    /* left: 0;
+    bottom: 0; */
     background: rgba(240, 240, 240, 0.58);
 }
 
