--- a/src/Components/DashboardPage/dashboardPage.scss
+++ b/src/Components/DashboardPage/dashboardPage.scss
@@ -59,10 +59,10 @@
     margin: auto 0;
 }
 
-.go-home__button{
-    background: $button-background;
-    color: $button-color;
-    width: $button-width;
-    height: $button-height;
-    margin: auto 1rem 2rem 0;
-}
+// .button{
+//     background: $button-background;
+//     color: $button-color;
+//     width: $button-width;
+//     height: $button-height;
+//     margin: $button-margin;
+// }
