--- a/src/Components/WelcomePage/welcomePage.scss
+++ b/src/Components/WelcomePage/welcomePage.scss
@@ -20,7 +20,7 @@
     height: 132px;
     left: 40px;
     top: 65px;
-    font-family: Sanchez;
+    font-family: $font-family;
     font-style: normal;
     font-weight: normal;
     font-size: 27px;
@@ -43,13 +43,12 @@
 .button{
     width: $button-width;
     height: $button-height;
-    background: $about-app-button-background;
+    background: $button--grey-background;
     margin: $button-margin;
     border:$button-border;
 
     a{
         text-decoration: none;
-        word-wrap: break-word;
         color: $button-color;
         word-break: break-all;
     }
@@ -58,7 +57,6 @@
 .travel-button{
     background: $button-background;
 }
-
 
 .home-page img{
     width: 324px;
