--- a/src/Components/_button.scss
+++ b/src/Components/_button.scss
@@ -3,5 +3,7 @@ $button-color: white;
 $button-width: 80px;
 $button-height: 28px;
 $button-margin: 7px;
-$about-app-button-background: rgb(207, 209, 214);
+$button--grey-background: rgb(207, 209, 214);
 $button-border: 1px solid white;
+
+$font-family: Sanchez;
