--- a/src/Components/DashboardPage/dashboardPage.scss
+++ b/src/Components/DashboardPage/dashboardPage.scss
@@ -50,7 +50,7 @@
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
-    padding: 1rem;
+    padding: 0 0 2rem 0;
 }
 
 .go-home-image{
@@ -59,10 +59,3 @@
     margin: auto 0;
 }
 
-// .button{
-//     background: $button-background;
-//     color: $button-color;
-//     width: $button-width;
-//     height: $button-height;
-//     margin: $button-margin;
-// }
