--- a/src/Components/WelcomePage/welcomePage.scss
+++ b/src/Components/WelcomePage/welcomePage.scss
@@ -8,7 +8,7 @@
 .welcome-panel{
     width: 332px;
     height: 246px;
-    margin: 2rem auto;
+    margin: 1rem auto;
     left: 22px;
     top: 38px;
     background: rgba(240, 240, 240, 0.58);
@@ -31,6 +31,7 @@
     align-items: center;
     text-align: center;
     color: #4F4F4F;
+    border: none;
 }
 
 .buttons-list{
@@ -59,7 +60,17 @@
 }
 
 .home-page img{
-    width: 324px;
-    height: 355px;
+    width: 310px;
+    height: 320px;
     border-radius: 23px;
+}
+
+@media(min-width: 40rem){
+    .welcome-panel{
+        margin: 2rem auto;
+    }
+    home-page img{
+        width: 324px;
+        height: 355px;
+    }
 }
