--- a/src/Components/DashboardPage/dashboardPage.scss
+++ b/src/Components/DashboardPage/dashboardPage.scss
@@ -87,13 +87,10 @@ input{
         width: 258px;
     }
     .filter-menu{
-        width: 50%;
+        width: 38vw;
         padding: 12px 26px;
     }
     .filters{
         width: 75%;
-        //display: flex;
-        //flex-direction: column;
-        //align-items: center;
     }
 }
