--- a/src/Components/PlaceList/placeList.css
+++ b/src/Components/PlaceList/placeList.css
@@ -1,4 +1,13 @@
 .placeList{
     display: flex;
     flex-direction: column;
+    width: 35vw;
+    margin: auto;
+}
+
+@media(min-width: 40rem){
+    .placeList{
+        width: 45vw;
+        margin: auto;
+    }
 }
